# LakeRidersAlertWeb

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml
lakeridersalert_web/: manage.py
lakeridersalert_web/app/: __init__.py  models.py  tasks.py  urls.py  views.py
lakeridersalert_web/app/migrations/: 0001_initial.py  0002_rename_calendar_session.py  0003_alter_alert_timestamp_alter_session_datetime.py  0004_alter_session_datetime.py  0005_alter_session_datetime.py  0006_rename_calendar_entry_alert_session_and_more.py
lakeridersalert_web/app/scripts/alert/: run.py  sessions.py  web.py
lakeridersalert_web/app/static/app/: style.css
lakeridersalert_web/app/templates/app/: app_not_started.html  db.html  index.html  wip.html
lakeridersalert_web/lakeridersalert_web/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
